--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: GitHub DevSecOps Fundamentals
-site_url: https://github.com/pages/githubuniverseworkshops/github-devsecops-fundamentals
-site_author: Igwe Kalu <igwejk@github.com>
+#site_url: https://github.com/pages/githubuniverseworkshops/github-devsecops-fundamentals
+#site_author: Igwe Kalu <igwejk@github.com>
 site_description: GitHub Universe 2023 | Workshop
 
 remote_name: origin
 remote_branch: gh-pages
 
 edit_uri: edit/main/docs/
-repo_url: https://github.com/githubuniverseworkshops/github-devsecops-fundamentals
+#repo_url: https://github.com/githubuniverseworkshops/github-devsecops-fundamentals
 repo_name: GitHub
 
 theme:
