--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -65,6 +65,6 @@ jobs:
       # Prepend a 'v' to the beginning (e.g. 'v1.2.3')
       - name: Create Release
         id: create-release
-        uses: issue-ops/releaser@v0.1.1
+        uses: issue-ops/releaser@main
         with:
           tag: v${{ steps.tag-commit.outputs.version }}
