--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,7 @@ site_name: GitHub DevSecOps Fundamentals
 site_description: GitHub Universe 2023 | Workshop
 
 remote_name: origin
-remote_branch: gh-pages
+remote_branch: github-pages
 
 #repo_url: https://github.com/githubuniverseworkshops/github-devsecops-fundamentals
 repo_name: GitHub
