--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,22 @@
-FROM mcr.microsoft.com/devcontainers/python:3
+ # Python Version
+ # Use -bullseye variants on local arm64/Apple Silicon
+ # Options:
+ #   - 3
+ #   - 3.11
+ #   - 3.10
+ #   - 3.9
+ #   - 3-bullseye
+ #   - 3.11-bullseye
+ #   - 3.10-bullseye
+ #   - 3.9-bullseye
+ #   - 3-buster
+ #   - 3.11-buster
+ #   - 3.10-buster
+ #   - 3.9-buster
+ARG VARIANT=3-bullseye
+FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 
-LABEL org.opencontainers.image.authors="igwejk@github.com"
-LABEL org.opencontainers.image.source="https://github.com/githubuniverseworkshops/github-devsecops-fundamentals"
-
-COPY requirements.txt /tmp/pip-tmp/
-RUN pip3 --disable-pip-version-check --no-cache-dir install --requirement /tmp/pip-tmp/requirements.txt && rm -rf /tmp/pip-tmp
+# [Optional] Uncomment this section to install additional OS packages.
+# RUN apt-get update \
+#     && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends <your-package-list-here>
