--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -56,7 +56,7 @@ jobs:
 
       # Get the version and update the tags to use in the release
       - name: Tag Commit
-        id: tag-commit
+        id: tag
         uses: issue-ops/semver@v0.1.0
         with:
           manifest-path: pyproject.toml
@@ -67,6 +67,6 @@ jobs:
       # Prepend a 'v' to the beginning (e.g. 'v1.2.3')
       - name: Create Release
         id: create-release
-        uses: issue-ops/releaser@main
+        uses: issue-ops/releaser@v0.1.2
         with:
-          tag: v${{ steps.tag-commit.outputs.version }}
+          tag: v${{ steps.tag.outputs.version }}
